# src/routers/auth.js
@@ -4,8 +4,10 @@ import {
   userRegisterController,
   userLoginController,
   refreshUserSessionController,
+  userLogoutController,
 } from '../controllers/auth.js';
 import { validateBody } from '../middlewares/validateBody.js';
+import { authorization } from '../middlewares/authenticate.js';
 
 const router = Router();
 
@@ -16,5 +18,6 @@ router.post(
 );
 router.post('/login', validateBody(loginUserSchema), userLoginController);
 router.post('/refresh', refreshUserSessionController);
+router.post('/logout', authorization, userLogoutController);
 
 export const authRouter = router;
